# FileHopZ

./: CMakeLists.txt  README.md
include/: data_transfer.hpp  file_transfer.hpp  ftp_packet.hpp  packet.hpp
include/errors/: filehopz_error.hpp
include/logger/: logger.hpp
include/protohopz/: ProtoStream.hpp  protohopz.hpp  protohopz_packet.hpp  protostream.hpp
include/receiver/: receiver.hpp
include/sender/: sender.hpp
include/utils/: async_queue.hpp  async_value.hpp  crypto_context.hpp  file_builder.hpp  file_walker.hpp  thread_pool.hpp  timer.hpp
src/: data_transfer.cpp  file_transfer.cpp  main.cpp
src/errors/: filehopz_error.cpp
src/logger/: logger.cpp
src/protohopz/: protohopz.cpp  protostream.cpp
src/receiver/: receiver.cpp
src/sender/: sender.cpp
src/utils/: crypto_context.cpp  file_builder.cpp  file_walker.cpp  thread_pool.cpp
tests/test_dir/: start_test.sh
tests/test_dir/test_transfer/: broken_link  link_to_nested_dir  super_big_file
tests/test_dir/test_transfer/nested_dir/: inner_file
tests/test_dir/test_transfer_recv/: big_file  file_n1  file_n2  file_n3  link_to_file_n1  relative_target_link
tests/utils_tests/: crypto_context_test.cpp
